--- a/app/src/main/res/drawable/upload_bg.xml
+++ b/app/src/main/res/drawable/upload_bg.xml
@@ -1,4 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#0dafdc">
+
+    <item>
+        <shape android:shape="rectangle"
+            >
+
+
+            <corners
+                android:radius="10dp"/>
+
+
+            <gradient android:angle="0"
+                android:startColor="@color/account_status_green_color"
+                android:endColor="@color/account_status_green_color"/>
+
+        </shape>
+    </item>
+</ripple>
+<!--
+
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="-50dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,12 +30,12 @@
             <size
                 android:width="80dp"
                 android:height="80dp" />
-<!--
+&lt;!&ndash;
             <gradient
                 android:angle="180"
                 android:startColor="@color/account_status_green_color"
                 android:endColor="@color/account_status_green_color"/>
--->
+&ndash;&gt;
             <gradient
                 android:angle="270"
                 android:startColor="#e9eced"
@@ -20,11 +43,11 @@
 
             <corners android:bottomRightRadius="6dp" />
 
-          <!--  <stroke
+          &lt;!&ndash;  <stroke
                 android:width="1dip"
-                android:color="#e9eced" />-->
+                android:color="#e9eced" />&ndash;&gt;
 
 
         </shape>
     </item>
-</layer-list>
+</layer-list>-->
