--- a/app/src/main/res/layout/pending_screen.xml
+++ b/app/src/main/res/layout/pending_screen.xml
@@ -5,61 +5,106 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.google.android.material.appbar.AppBarLayout
+    <RelativeLayout
+        android:visibility="visible"
         android:layout_width="match_parent"
-        android:id="@+id/bar_layout"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_scrollFlags="scroll|enterAlways|snap"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
 
             <ImageView
-                android:id="@+id/back_img"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
-                android:layout_gravity="start"
-                android:src="@mipmap/back_arrow" />
-
-            <TextView
-                android:id="@+id/title_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="15dp"
-                android:text="Pending List"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/_15sdp"
-                android:textStyle="bold" />
+                android:id="@+id/circle1"
+                android:layout_width="134dp"
+                android:layout_height="134dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="@dimen/_125sdp"
+                android:layout_marginRight="-100dp"
+                android:src="@drawable/circletransparant" />
 
             <ImageView
-                android:id="@+id/home_img"
-                android:layout_width="30dp"
-                android:layout_height="40dp"
-                android:layout_centerInParent="true"
-                android:src="@mipmap/home_img"
-                android:layout_marginRight="@dimen/_12sdp"
+                android:id="@+id/circle2"
+                android:layout_width="134dp"
+                android:layout_height="134dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="-100dp"
+                android:layout_marginBottom="50dp"
+                android:src="@drawable/circletransparant" />
 
-                android:layout_alignParentEnd="true" />
+            <ImageView
+                android:id="@+id/circle3"
+                android:layout_width="162dp"
+                android:layout_height="162dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="-80dp"
+                android:layout_marginBottom="-30dp"
+                android:src="@drawable/circle" />
 
+            <ImageView
+                android:id="@+id/circle4"
+                android:layout_width="124dp"
+                android:layout_height="124dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="-50dp"
+                android:layout_marginBottom="-50dp"
+                android:layout_toLeftOf="@+id/circle3"
+                android:src="@drawable/circletransparant" />
 
         </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
 
-    </com.google.android.material.appbar.AppBarLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/header_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/gradiant_bg">
+
+        <ImageView
+            android:id="@+id/refresh"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_alignParentStart="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="start"
+            android:layout_centerVertical="true"
+            android:onClick="@{()-> activity.onBackPressed()}"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:background="@drawable/back"
+            android:backgroundTint="@android:color/white" />
+
+
+        <TextView
+            android:id="@+id/title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="Field Visit"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/_15sdp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/home_img"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:adjustViewBounds="true"
+            android:onClick="@{()-> activity.dashboard()}"
+            android:background="@drawable/ic_home_black_24dp"
+            android:backgroundTint="@android:color/white"
+            android:scaleType="centerInside" />
+
+    </RelativeLayout>
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_view"
         android:visibility="gone"
@@ -68,9 +113,10 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"></androidx.core.widget.NestedScrollView>
 
         <RelativeLayout
-            android:layout_below="@+id/bar_layout"
+            android:layout_below="@+id/header_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/transparent_black_hex_1"
             android:visibility="visible"
             android:orientation="vertical">
 
@@ -78,13 +124,13 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/cornered_border_bg_strong"
                 android:layout_marginTop="10dp"
                 android:elevation="@dimen/_6sdp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:orientation="horizontal"
+                    android:visibility="gone"
                     android:id="@+id/content1"
                     android:baselineAligned="false">
                     <RelativeLayout
@@ -139,15 +185,15 @@
                         android:id="@+id/new_trader_recycler"
                         android:scrollbarSize="1dp"
                         android:padding="5dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:scrollbars="vertical"/>
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/field_visit_recycler"
                         android:scrollbarSize="1dp"
-                        android:padding="5dp"
-                        android:visibility="gone"
+                        android:padding="10dp"
+                        android:visibility="visible"
                         android:scrollbars="vertical"/>
 
                     <RelativeLayout
