Dash board Screen Changes New trade check  Api call

--- a/app/src/main/res/drawable/dash_board_bg_rect.xml
+++ b/app/src/main/res/drawable/dash_board_bg_rect.xml
@@ -52,7 +52,7 @@
     <!-- Background -->
     <item>
         <shape>
-            <solid android:color="#EFEBEB"/>
+            <solid android:color="#F8F8F8"/>
             <corners android:radius="30dp"/>
         </shape>
     </item>
