--- a/app/src/main/res/drawable/ic_stock_market.xml
+++ b/app/src/main/res/drawable/ic_stock_market.xml
@@ -1,24 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="50dp"
     android:height="50dp"
-    android:viewportWidth="64"
-    android:viewportHeight="64">
+    android:viewportWidth="512"
+    android:viewportHeight="512">
   <path
-      android:fillColor="@color/white"
-      android:pathData="m49,23v-2c1.654,0 3,-1.346 3,-3s-1.346,-3 -3,-3h-2c-0.552,0 -1,-0.448 -1,-1s0.448,-1 1,-1h3v1h2v-3h-3v-2h-2v2c-1.654,0 -3,1.346 -3,3s1.346,3 3,3h2c0.552,0 1,0.448 1,1s-0.448,1 -1,1h-3v-1h-2v3h3v2z"/>
+      android:fillColor="#FFF"
+      android:pathData="m91,301v-30h30v-120h-30v-30h-30v30h-30v120h30v30z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="m59,16c0,-6.065 -4.935,-11 -11,-11s-11,4.935 -11,11 4.935,11 11,11 11,-4.935 11,-11zM39,16c0,-4.963 4.037,-9 9,-9s9,4.037 9,9 -4.037,9 -9,9 -9,-4.037 -9,-9z"/>
+      android:fillColor="#FFF"
+      android:pathData="m211,241v-30h30v-120h-30v-30h-30v30h-30v120h30v30z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="m63,16c0,-8.271 -6.729,-15 -15,-15s-15,6.729 -15,15c0,6.368 3.995,11.808 9.606,13.98l-2.02,2.02h-8.04l-7,8h-11.983l-12.297,13.321 1.469,1.357 11.703,-12.678h12.017l7,-8h7.96l3.359,-3.359c0.916,0.202 1.863,0.314 2.833,0.339l-5.021,5.02h-9.086l-6,8h-11.954l-14.546,16.624v2.376h58v-36.836c2.474,-2.676 4,-6.241 4,-10.164zM35,16c0,-7.168 5.832,-13 13,-13s13,5.832 13,13 -5.832,13 -13,13 -13,-5.832 -13,-13zM51,30.698v30.302h-4v-26.586l3.665,-3.665c0.111,-0.02 0.225,-0.029 0.335,-0.051zM43.414,38 L45,36.414v24.586h-4v-23zM15,61h-4v-8.767l4,-4.571zM17,46h4v15h-4zM23,46h4v15h-4zM29,45.333 L33,40v21h-4zM35,38h4v23h-4zM9,54.519v6.481h-5.671zM53,61v-30.875c1.449,-0.515 2.794,-1.244 4,-2.153v33.028z"/>
+      android:fillColor="#FFF"
+      android:pathData="m331,211v-30h30v-120h-30v-30h-30v30h-30v120h30v30z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="m7,38h2v-4h2v-12h-2v-4h-2v4h-2v12h2zM7,24h2v8h-2z"/>
+      android:fillColor="#FFF"
+      android:pathData="m451,0h-30v30h-30v121h30v30h30v-30h30v-121h-30z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="m15,33h2v-4h2v-10h-2v-4h-2v4h-2v10h2zM15,21h2v6h-2z"/>
+      android:fillColor="#FFF"
+      android:pathData="m484.296,292.885 l16.157,-69.097 -64.98,-28.55 -12.071,27.451 24.313,10.686 -75.26,37.625h-120l-120,60h-117.455v30h124.545l120,-60h120l81.579,-40.783 -6.037,25.842z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="m23,26h2v-4h2v-8h-2v-4h-2v4h-2v8h2zM23,16h2v4h-2z"/>
+      android:fillColor="#FFF"
+      android:pathData="m482,331h-91v151h-30v-151h-90v151h-30v-130.272l-90,45v85.272h-30v-91h-91v91h-30v30h512v-30h-30z"/>
 </vector>
