--- a/app/src/main/res/layout/new_dashboard.xml
+++ b/app/src/main/res/layout/new_dashboard.xml
@@ -43,7 +43,7 @@
                     <RelativeLayout
                         android:id="@+id/header_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="220dp"
+                        android:layout_height="wrap_content"
                         >
 
 
@@ -184,7 +184,7 @@
                             android:background="@drawable/dash_board_bg_rect"
                             android:id="@+id/voteprogresscard"
                             android:layout_width="wrap_content"
-                            android:layout_height="50dp"
+                            android:layout_height="60dp"
                             android:layout_marginLeft="40dp"
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="20dp"
@@ -205,7 +205,7 @@
                                     android:layout_width="50dp"
                                     android:layout_height="50dp"
                                     android:background="@drawable/cerclebackgroundpurple"
-                                    android:src="@drawable/ic_stock_market"
+                                    android:src="@drawable/ic_investment"
                                      />
 
 
@@ -255,7 +255,7 @@
                         <RelativeLayout
                             android:id="@+id/attendanecard"
                             android:layout_width="wrap_content"
-                            android:layout_height="50dp"
+                            android:layout_height="60dp"
                             android:layout_marginLeft="40dp"
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="20dp"
@@ -330,7 +330,7 @@
                             android:background="@drawable/dash_board_bg_rect"
                             android:id="@+id/cameracard"
                             android:layout_width="wrap_content"
-                            android:layout_height="50dp"
+                            android:layout_height="60dp"
                             android:layout_marginLeft="40dp"
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="20dp"
@@ -351,9 +351,9 @@
                                     android:layout_width="50dp"
                                     android:layout_height="50dp"
                                     android:layout_gravity="center_vertical"
+                                    android:padding="8dp"
                                     android:background="@drawable/cerclebackgroundgreen"
-                                    android:padding="5dp"
-                                    android:src="@drawable/ic_camera_black_24dp"
+                                    android:src="@drawable/ic_positive_review"
                                     android:visibility="visible" />
 
                                 <View
@@ -404,7 +404,7 @@
                             android:background="@drawable/dash_board_bg_rect"
                             android:id="@+id/votecountcard"
                             android:layout_width="wrap_content"
-                            android:layout_height="50dp"
+                            android:layout_height="60dp"
                             android:layout_marginLeft="40dp"
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="20dp"
@@ -480,7 +480,7 @@
                             android:background="@drawable/dash_board_bg_rect"
                             android:id="@+id/pendingScreen"
                             android:layout_width="wrap_content"
-                            android:layout_height="50dp"
+                            android:layout_height="60dp"
                             android:layout_marginLeft="40dp"
                             android:layout_marginRight="40dp"
                             android:layout_marginTop="20dp"
@@ -502,8 +502,8 @@
                                     android:layout_height="50dp"
                                     android:layout_gravity="center"
                                     android:background="@drawable/circle"
-                                    android:padding="8dp"
-                                    android:src="@drawable/ic_to_do_list"
+                                    android:padding="10dp"
+                                    android:src="@drawable/ic_computing_cloud"
                                     android:visibility="visible" />
 
                                 <View
